Removed inline object creation. Added project membership tab to 'Add Project' workflow
implements blueprint tenant-creation-workflow

Change-Id: I856bdccc2e785a02f31640f37a9839bac573e610

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1245,117 +1245,120 @@ label.log-length {
     /* Buttons */
   .btn-group {
     margin-left:0px;
-	padding: 2px 10px 0 0;
-	margin-bottom: 0px;
-	border: 1px solid #DDD;
-	border-bottom: none;
-  }
-  .btn-group:last-child {
-	border-bottom: 1px solid #DDD;
-  }
-  .btn-group:nth-child(odd) {
-	background-color: #F9F9F9;
-  }
+      padding: 2px 10px 0 0;
+      margin-bottom: 0px;
+      border: 1px solid #DDD;
+      border-bottom: none;
+    }
   .btn-group .active {
-	float: right;
+    float: right;
   }
   a.btn-primary:hover {
-	background-color: #04C;
+    background-color: #04C;
   }
 
   /* Header */
   .help_text {
-	margin-left: 15px;
-	margin-bottom: 15px;
+    margin-left: 15px;
+    margin-bottom: 15px;
   }
   .users_title {
-	color: #555;
-	font-weight: bold;
-	padding-left: 10px;
-	float: left;
+    color: #555;
+    font-weight: bold;
+    padding-left: 10px;
+    float: left;
   }
   input {
-	background: url(/static/dashboard/img/search.png) no-repeat 105px 5px whiteSmoke;
+    background: url(/static/dashboard/img/search.png) no-repeat 105px 5px whiteSmoke;
   }
   .fake_table_header {
-	background-color: #F1F1F1;
-	width: 306px;
-	height: 38px;
-	padding-top: 15px;
-	border: 1px solid #DDD;
-	border-bottom: none;
+    background-color: #F1F1F1;
+    width: 306px;
+    height: 38px;
+    padding-top: 15px;
+    border: 1px solid #DDD;
+    border-bottom: none;
   }
 
     /* 'Fake table' body */
   .fake_table {
-	margin-left: 5px;
-	width: 315px;
-	ul.no_results {
+    margin-left: 5px;
+    width: 315px;
+    ul.no_results {
       width: 298px;
-	}
-	ul.btn-group:hover {
-	    background-color: #DDD;
-	}
+    }
+    ul.btn-group:hover {
+        background-color: #DDD;
+    }
   }
   .left {
-	.fake_table_header {
+    .fake_table_header {
       width: 318px;
-	}
+    }
   }
   .right {
-	.fake_table_header {
+    .fake_table_header {
       width: 318px;
       margin-left: -15px;
-	}
-	.fake_table ul.no_results {
+    }
+    .fake_table ul.no_results {
       margin-left: -20px;
-	}
+    }
   }
 
   /* User lists */
   .member {
-	padding: 10px;
-	text-align: left;
+    padding: 10px;
+    text-align: left;
   }
   .project_members {
-	margin-left: -20px;
+    margin-left: -20px;
   }
   .project_members ul.btn-group,
   .available_users ul.btn-group {
-	width: 308px;
+    width: 308px;
+  }
+  .dark_stripe {
+    background-color: #F9F9F9;
+  }
+  .light_stripe {
+    background-color: white;
+  }
+  .last_stripe {
+    border-bottom: 1px solid #DDD;
   }
 
   /* List filtering */
   .filter {
-	width: 120px;
-	margin: -5px 13px 15px 0px;
-	float: right;
+    width: 120px;
+    margin: -5px 13px 15px 0px;
+    float: right;
   }
   .no_results {
-	border: 1px solid #DDD;
-	padding: 10px;
-	color: #08C;
+    border: 1px solid #DDD;
+    padding: 10px;
+    color: #08C;
   }
 
   /* Role dropdown menus */
   .role_dropdown li {
-	cursor: pointer;
-	background: none;
-	float: none;
-	display: block;
-	padding: 5px 10px;
-	color: black;
-	text-align: left;
-	border-radius: 0;
-	border: 0 none;
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-	box-shadow: none;
-	z-index: 99999;
+    cursor: pointer;
+    background: none;
+    float: none;
+    display: block;
+    padding: 5px 10px;
+    color: black;
+    text-align: left;
+    border-radius: 0;
+    border: 0 none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    z-index: 99999;
 
-	&:hover {
-	  background-color: #CDCDCD;
-	}
+    &:hover {
+      background-color: #CDCDCD;
+    }
   }
   .nav .role_options {
     float: right;
