Adds i18n support for Javascript.
Uses Django's built-in client-side i18n machinery to
support translation strings in javascript code as well.

Various cleanup, etc. included to make translation file
generation succeed and remove obsolete strings.

Implements blueprint javascript-i18n.

Change-Id: I62c237ae98b26307e1e7d8a7d913237530e7324f

--- a/horizon/templates/horizon/_scripts.html
+++ b/horizon/templates/horizon/_scripts.html
@@ -1,5 +1,8 @@
 {% load compress %}
 
+{% comment %} Django's JavaScript i18n Implementation {% endcomment %}
+<script type="text/javascript" src="{% url horizon:jsi18n 'horizon' %}"></script>
+
 {% compress js %}
 {% comment %} jQuery and Plugins {% endcomment %}
 <script src='{{ STATIC_URL }}horizon/lib/jquery/jquery.min.js' type='text/javascript' charset="utf-8"></script>
