Adds faux "edit" UI for Flavors.
Since Nova manages flavors by way of marking flavors as
inactive (to avoid losing data for instances), we want to
"edit" a flavor by first deleting the old flavor and then
adding in a new flavor with the same name but a new id.

Implements blueprint edit-flavor-ui.

Change-Id: If78cc2c6469e6957e766f6b260b6beeaddeeb50e

--- a/horizon/dashboards/syspanel/flavors/templates/flavors/index.html
+++ b/horizon/dashboards/syspanel/flavors/templates/flavors/index.html
@@ -1,11 +1,9 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}Flavors{% endblock %}
+{% block title %}{% trans "Flavors" %}{% endblock %}
 
 {% block page_header %}
-  {% url horizon:syspanel:flavors:index as refresh_link %}
-  {# to make searchable false, just remove it from the include statement #}
-  {% include "horizon/common/_page_header.html" with title=_("Flavors") refresh_link=refresh_link searchable="true" %}
+  {% include "horizon/common/_page_header.html" with title=_("Flavors") %}
 {% endblock page_header %}
 
 {% block main %}
