--- a/horizon/dashboards/syspanel/flavors/templates/flavors/create.html
+++ b/horizon/dashboards/syspanel/flavors/templates/flavors/create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}Create Flavors{% endblock %}
+{% block title %}{% trans "Create Flavor" %}{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Create Flavor") %}
