Switch to use python-swiftclient instead of cloudfiles.
This patch also resolves some thread-safety problems
with when the browser and associated tables are constructed
and where the request and data caches are stored on the table.

Also includes stylistic and UX enhancments to the swift
ResourceBrowser subclass.

Implements blueprint swiftclient.

Change-Id: I578277ff158b293ee50860528b069dc20e2136a9

--- a/horizon/templates/horizon/common/_data_table.html
+++ b/horizon/templates/horizon/common/_data_table.html
@@ -28,6 +28,7 @@
     </tr>
     {% endfor %}
     </tbody>
+    {% if table.footer %}
     <tfoot>
       {% if table.needs_summary_row %}
       <tr class="summation">
@@ -50,6 +51,7 @@
         </td>
       </tr>
     </tfoot>
+    {% endif %}
   </table>
   {% endwith %}
   {% if needs_form_wrapper %}</form>{% endif %}
