Fixes inline object creation button styling
Change-Id: I096fa89c23731d148447ff2a27f27e651f5b2918

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1495,3 +1495,12 @@ label.log-length {
     }
   }
 }
+
+/* Styling for inline object creation buttons */
+.btn-inline {
+    margin-bottom: 9px;
+}
+.modal-body fieldset .form-field select[data-add-item-url] {
+    width: 276px;
+    margin-right: 2px;
+}
