--- a/horizon/dashboards/nova/instances/templates/instances/_launch_details_help.html
+++ b/horizon/dashboards/nova/instances/templates/instances/_launch_details_help.html
@@ -34,7 +34,7 @@
   </div>
 
   <div class="quota_title clearfix">
-    <strong>{% trans "Total Memory" %} <span>({{ usages.ram.used|intcomma }} {% trans "MB" %})</span></strong>
+    <strong>{% trans "Total RAM" %} <span>({{ usages.ram.used|intcomma }} {% trans "MB" %})</span></strong>
     <p>{{ usages.ram.available|quota:"MB"|intcomma }}</p>
   </div>
   <div id="quota_ram" data-progress-indicator-flavor data-quota-limit="{{ usages.ram.quota }}" data-quota-used="{{ usages.ram.used }}" class="quota_bar">
