Fix slight grammar error.
Change-Id: Ie6f8f8b48c3cd1a85124ddb837f5bdb76ea7bb76

--- a/horizon/dashboards/nova/images_and_snapshots/templates/images_and_snapshots/images/_create.html
+++ b/horizon/dashboards/nova/images_and_snapshots/templates/images_and_snapshots/images/_create.html
@@ -22,7 +22,7 @@
     </p>
     <p>
         <strong>{% trans "Please note: " %}</strong>
-        {% trans "The Image Location field MUST be a valid and direct URL to the image binary. URLs that redirect or serve error pages will results in unusable images." %}
+        {% trans "The Image Location field MUST be a valid and direct URL to the image binary. URLs that redirect or serve error pages will result in unusable images." %}
     </p>
 </div>
 {% endblock %}
