Add Quantum public network support.
Implements blueprint quantum-public-network.

Change-Id: I975532468b95c9198091ebf85c475d341d7e861a

--- a/horizon/dashboards/nova/networks/templates/networks/_detail_overview.html
+++ b/horizon/dashboards/nova/networks/templates/networks/_detail_overview.html
@@ -14,5 +14,7 @@
     <dd>{{ network.status|default:"Unknown" }}</dd>
     <dt>{% trans "Admin State" %}</dt>
     <dd>{{ network.admin_state|default:"Unknown" }}</dd>
+    <dt>{% trans "Shared" %}</dt>
+    <dd>{{ network.shared|yesno|capfirst }}</dd>
   </dl>
 </div>
