Preserve add-to-field after form error.
Fixes bug 1037302.

Change-Id: I827f1b74efc6835dfac1fdcdc7c2a7c12af421eb

--- a/horizon/templates/horizon/common/_modal_form.html
+++ b/horizon/templates/horizon/common/_modal_form.html
@@ -9,7 +9,7 @@
   </div>
   <hr />
   {% endif %}
-  <form id="{% block form_id %}{% endblock %}" class="{% block form_class %}{% endblock %}" action="{% block form_action %}{% endblock %}" method="{% block form-method %}POST{% endblock %}" {% block form_attrs %}{% endblock %}>{% csrf_token %}
+  <form id="{% block form_id %}{% endblock %}" class="{% block form_class %}{% endblock %}" action="{% block form_action %}{% endblock %}" method="{% block form-method %}POST{% endblock %}" {% if add_to_field %}data-add-to-field="{{ add_to_field }}"{% endif %} {% block form_attrs %}{% endblock %}>{% csrf_token %}
     <div class="modal-body clearfix">
     {% block modal-body %}
         <fieldset>
