--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1744,6 +1744,311 @@ label.log-length {
 
 }
 
+/* Styling for network topology */
+.box-sizing(@box: border-box) {
+  -webkit-box-sizing: @box;
+  -moz-box-sizing: @box;
+  -ms-box-sizing: @box;
+  -o-box-sizing: @box;
+  box-sizing: @box;
+}
+
+@-webkit-keyframes progress-bar-stripes {
+  from {
+    background-position: 20px 0;
+  }
+  to {
+    background-position: 0 0;
+  }
+}
+
+@-moz-keyframes progress-bar-stripes {
+  from {
+    background-position: 20px 0;
+  }
+  to {
+    background-position: 0 0;
+  }
+}
+
+@-ms-keyframes progress-bar-stripes {
+  from {
+    background-position: 20px 0;
+  }
+  to {
+    background-position: 0 0;
+  }
+}
+
+@-o-keyframes progress-bar-stripes {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 20px 0;
+  }
+}
+
+@keyframes progress-bar-stripes {
+  from {
+    background-position: 20px 0;
+  }
+  to {
+    background-position: 0 0;
+  }
+}
+
+#topologyCanvas {
+  .box-sizing();
+  width: 100%;
+  height: 500px;
+  padding: 25px;
+  padding-left: 50px;
+  background: #efefef;
+}
+div.networks {
+  height: 100%;
+}
+div.network {
+  .box-sizing();
+  float: left;
+  width: 270px;
+  height: 100%;
+  position: relative;
+  .nicname {
+    .box-sizing();
+    height: 100%;
+    width: 17px;
+    border-radius: 17px;
+    z-index: 200;
+    color:#fff;
+    position: absolute;
+    left: -8px;
+    top: 0px;
+    cursor: pointer;
+    &:hover {
+      background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15));
+      background-image: -moz-linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15));
+      background-image: -ms-linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15));
+      background-image: -o-linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15));
+      background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15));
+      background-size: 10px 10px;
+    }
+    h3 {
+      font-size: 12px;
+      line-height: 1;
+      position: relative;
+      font-weight: normal;
+      top:60%;
+      color:#fff;
+      left:-1px;
+      letter-spacing: 0.2em;
+      -webkit-transform: rotate(-90deg);
+      -moz-transform: rotate(-90deg);
+      -ms-transform: rotate(-90deg);
+      -o-transform: rotate(-90deg);
+      transform: rotate(-90deg);
+      white-space: nowrap;
+      text-shadow: 0px 0px 5px #000;
+      span.ip {
+        margin-left: 0.5em;
+        color: #000;
+        font-weight: normal;
+        font-size: 90%;
+        text-shadow: 0px 0px 0px #000;
+      }
+    }
+  }
+  .router, .server, .device {
+    .box-sizing();
+    cursor: pointer;
+    width: 90px;
+    border: 3px solid #666;
+    position: absolute;
+    top:30px;
+    left:90px;
+    padding: 0 3px;
+    background: #666;
+    margin-bottom: 20px;
+    &:before,&:after  {
+      content: "";
+      width: 90px;
+      height: 34px;
+      text-align: center;
+      position: absolute;
+      border: 3px solid #666;
+      .box-sizing();
+      background: #fff;
+      border-radius:50%;
+      top:-19px;
+      left:-3px;
+    }
+    &:after {
+      content:"";
+      color: #fff;
+      background:#666;
+      border-radius:50%;
+      top:auto;
+      bottom:-19px;
+      font-size: 11px;
+      line-height: 30px;
+    }
+    span.devicename {
+      position: absolute;
+      color: #fff;
+      bottom: -10px;
+      font-size: 12px;
+      line-height: 14px;
+      left:-4px;
+      width: 100%;
+      text-align: center;
+      z-index:300;
+      i {
+        display: inline-block;
+        width: 14px;
+        height:14px;
+        background: #fff url(/static/dashboard/img/router.png) no-repeat center center;
+        background-size: 12px 12px;
+        margin-right: 3px;
+        vertical-align: middle;
+        border-radius: 20px;
+      }
+    }
+    span.name {
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      display: block;
+      font-size : 12px;
+      position: relative;
+      z-index:10;
+      text-align: center;
+      top:-10px;
+      padding: 0 3px;
+    }
+    div.port {
+      text-align: right;
+      min-width: 90px;
+      height: 10px;
+      font:0px/0px sans-serif;
+      position: absolute;
+      left:-91px;
+      top:8px;
+      background-color: #37a9e3;
+      background-image: none;
+      -webkit-background-size: 20px 20px;
+      -moz-background-size: 20px 20px;
+      -o-background-size: 20px 20px;
+      background-size: 20px 20px;
+      z-index:100;
+      span.ip {
+        .box-sizing();
+        font-size: 9px;
+        line-height: 1;
+        text-shadow: 0px -1px #fff;
+        position: relative;
+        top:-1em;
+        width: 90px;
+        display: inline-block;
+        padding-right:8px;
+        padding-left: 8px;
+        word-wrap:break-word;
+        word-break:break-all;
+      }
+      &.right {
+        left:auto;
+        right:-92px;
+        width: 92px;
+        text-align: left;
+        span.ip {
+        }
+      }
+    }
+    &:hover {
+      div.port {
+        cursor:pointer;
+        background-color: #2688c0;
+        -webkit-animation: progress-bar-stripes 1s linear infinite;
+           -moz-animation: progress-bar-stripes 1s linear infinite;
+            -ms-animation: progress-bar-stripes 1s linear infinite;
+             -o-animation: progress-bar-stripes 1s linear infinite;
+                animation: progress-bar-stripes 1s linear infinite;
+        &:hover {
+        -webkit-animation: progress-bar-stripes 0.3s linear infinite;
+           -moz-animation: progress-bar-stripes 0.3s linear infinite;
+            -ms-animation: progress-bar-stripes 0.3s linear infinite;
+             -o-animation: progress-bar-stripes 0.3s linear infinite;
+                animation: progress-bar-stripes 0.3s linear infinite;
+        }
+      }
+      background-color: #444;
+      border-color: #444;
+      &:before {
+        border-color: #444;
+      }
+      &:after {
+        background-color: #444;
+        border-color: #444;
+      }
+    }
+  }
+  .device {
+    border:none;
+    background: transparent;
+  }
+  .server {
+    border-radius: 5px;
+    background: #fff;
+    span.devicename {
+      bottom: 0px;
+      font-size: 12px;
+      line-height: 14px;
+      left:-4px;
+      i {
+        display: inline-block;
+        width: 14px;
+        height:14px;
+        background: url(/static/dashboard/img/server.png) no-repeat center center;
+        background-size: 12px 12px;
+        margin-right: 3px;
+        vertical-align: middle;
+      }
+    }
+    span.name {
+      top:5px;
+      padding: 0 3px;
+    }
+    &:before {
+      border:none;
+      background: transparent;
+    }
+    &:after {
+      content: "";
+      width: 100%;
+      line-height: 1.2;
+      position: absolute;
+      text-align: center;
+      border-radius: 0;
+      background: #666;
+      color: #fff;
+      font-size: 11px;
+      height: 1.5em;
+      bottom:0px;
+      left: 0px;
+    }
+    &:hover {
+      background: #fff;
+    }
+  }
+}
+
+.launchButtons {
+  text-align: right;
+  margin: 10px 0px 15px 10px;
+  a.btn {
+    margin-left: 10px;
+  }
+}
 
 
 
