--- a/horizon/templates/_footer.html
+++ b/horizon/templates/_footer.html
@@ -1,7 +1,7 @@
 
 
   <hr>
-  <div style="margin-left: 25px;">
+  <div style="margin-left: 55px;float:left">
 
     © Syscloud Technology limited.<br>
     联系电话: 010-64823701-8016 <br>
