--- a/horizon/templates/horizon/common/_sidebar.html
+++ b/horizon/templates/horizon/common/_sidebar.html
@@ -11,7 +11,7 @@
       {% if num_of_tenants > 1 %}
         <a class="dropdown-toggle" data-toggle="dropdown" href="#tenant_switcher">
       {% endif %}
-        <h4>{% trans "Current Project" %}</h4>
+        <!-- <h4>{% trans "Current Project" %}</h4> --!>
         <h3>{{ request.user.tenant_name }}</h3>
       {% if num_of_tenants > 1 %}
       </a>
