Added support for volume types
As cinder already supports volume types, it's time
to be added in Horizon. The types are added in admin panel.
A volume can either have a *valid* type, or None.

There are two minor issues:
1. When a type is deleted, if there is a volume with
   this type, the type is returned as the id,
   instead of the name. Which is good as consistency,
   but maybe a type should not be deleted if used by a volume?
2. If no vol type is passed(None) value, the type is being
   assigned as 'None', and returned as a string('None')
3. In the create volume type form, the 'Description' is
   empty at the moment, I couldn't find any help info
   to add for volume types...

Implements blueprint volume-types

Tested with n-cinder and n-vol services. Since Folsom both
support volume-types. I'm not sure if it is possible a grizzly
Dashboard to work with essex nova, which could be a problem.
Dashboard doesn't seem to provide permissions based on tables,
so if it needs to check if a service is available to show/hide
volume types, this will need some more effors to implement
permissions on table/action level. Or maybe this needs to be
added as a standalone panel?

Patch set 2: implemented suggestions, added one more thing:
When creating a volume from a snapshot, set the volume type
initial as the type of the original volume from which
the snapshot is being created.

Patch Set 3: Updated the description of volume types,
based on the notes from:
https://etherpad.openstack.org/grizzly-cinder-volumetypes
https://etherpad.openstack.org/cinder-usecases
Any feedback on the description is welcome.

Change-Id: Ib0c136c5c8cd9fbd34ce1dd346260f404c96f667

--- a/openstack_dashboard/dashboards/admin/volumes/templates/volumes/index.html
+++ b/openstack_dashboard/dashboards/admin/volumes/templates/volumes/index.html
@@ -7,7 +7,11 @@
 {% endblock page_header %}
 
 {% block main %}
-    {{ table.render }}
+  <div id="volumes">
+      {{ volumes_table.render }}
+  </div>
+
+  <div id="volume-types">
+      {{ volume_types_table.render }}
+  </div>
 {% endblock %}
-
-
