--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_vnc.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_vnc.html
@@ -3,8 +3,15 @@
 <h3>{% trans "Instance VNC Console" %}</h3>
 {% if vnc_url %}
 <p class='alert alert-info'>{% blocktrans %}If VNC console is not responding to keyboard input: click the grey status bar below.{% endblocktrans %} <a href="{{ vnc_url }}">{% trans "Click here to show only VNC" %}</a></p>
-<iframe src="{{ vnc_url }}" width="728" height="436"></iframe>
+<iframe id="vnc_console" src="{{ vnc_url }}" style="width:100%;height:100%"></iframe>
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('iframe#vnc_console').css({
+            height: $(document).height() + 'px'
+        });
+    });
+</script>
 {% else %}
-<p class='alert alert-error'>{% blocktrans %}VNC console is currently unavailabe. Please try again later.{% endblocktrans %}
+<p class='alert alert-error'>{% blocktrans %}VNC console is currently unavailable. Please try again later.{% endblocktrans %}
 <a class='btn btn-mini' href="{% url horizon:project:instances:detail instance_id %}">{% trans "Reload" %}</a></p>
 {% endif %}
