Added List Images Support

--- a/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/index.html
+++ b/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/index.html
@@ -10,6 +10,9 @@
   <div class="images">
     {{ images_table.render }}
   </div>
+  <div class="building_images">
+    {{ building_images_table.render }}
+  </div>
   <div class="snapshots">
     {{ snapshots_table.render }}
   </div>
