--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_vnc.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_vnc.html
@@ -5,7 +5,7 @@
 <p class='alert alert-info'>{% blocktrans %}If VNC console is not responding to keyboard input: click the grey status bar below.{% endblocktrans %} <a href="{{ vnc_url }}">{% trans "Click here to show only VNC" %}</a></p>
 <iframe id="vnc_console" src="{{ vnc_url }}" style="width:100%;height:100%"></iframe>
 <script type="text/javascript">
-    $(document).ready(function() {
+    addHorizonLoadEvent(function() {
         $('iframe#vnc_console').css({
             height: $(document).height() + 'px'
         });
