Client-side validation of password/confirmation match
Fixes bug 1055234

Change-Id: I25a3e8463894f0fb08e26e502f1baf0822d90437

--- a/openstack_dashboard/dashboards/admin/users/templates/users/_create.html
+++ b/openstack_dashboard/dashboards/admin/users/templates/users/_create.html
@@ -16,6 +16,16 @@
     <h3>{% trans "Description" %}:</h3>
     <p>{% trans "From here you can create a new user and assign them to a project." %}</p>
 </div>
+
+<script type="text/javascript">
+  if (typeof horizon.user !== 'undefined') {
+    horizon.user.init();
+  } else {
+    addHorizonLoadEvent(function() {
+      horizon.user.init();
+    });
+  }
+</script>
 {% endblock %}
 
 {% block modal-footer %}
