--- a/horizon/templates/horizon/common/_data_table.html
+++ b/horizon/templates/horizon/common/_data_table.html
@@ -3,7 +3,7 @@
 <div class="table_wrapper">
   {% if needs_form_wrapper %}<form action="{{ table.get_absolute_url }}" method="POST">{% csrf_token %}{% endif %}
   {% with columns=table.get_columns rows=table.get_rows %}
-  <table id="{{ table.name }}" class="table table-bordered table-striped">
+  <table id="{{ table.name }}" class="table table-bordered table-striped datatable">
     <thead>
       <tr class='table_caption'>
         <th class='table_header' colspan='{{ columns|length }}'>
@@ -50,7 +50,7 @@
       {% endif %}
       <tr>
         <td colspan="{{ table.get_columns|length }}">
-          <span>{% blocktrans count counter=rows|length %}Displaying {{ counter }} item{% plural %}Displaying {{ counter }} items{% endblocktrans %}</span>
+          <span class="table_count">{% blocktrans count counter=rows|length %}Displaying {{ counter }} item{% plural %}Displaying {{ counter }} items{% endblocktrans %}</span>
           {% if table.has_more_data %}
           <span class="spacer">|</span>
           <a href="?{{ table.get_pagination_string }}">More&nbsp;&raquo;</a>
